Add missing placeholder for QLatin1String::arg()

Task-number: QTBUG-127931
Change-Id: I6220d138b05ea2e40561ff493a3777d188cb5690
Reviewed-by: Frank Meerkoetter <frank.meerkoetter@basyskom.com>